--- a/css/main.css
+++ b/css/main.css
@@ -474,7 +474,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   gap: 112px;
-  flex-grow: 68px;
+  row-gap: 60px;
   margin-bottom: 60px;
   width: 100%;
 }
